# hpp-fcl

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  INSTALL  LICENSE  NEWS  README.md  colcon.pkg  flake.nix  hpp-fclConfig.cmake  package.xml
.github/workflows/: conda-env.yml  macos-linux-conda.yml  macos-linux-pip.yml  ros_ci.yml  windows-conda-clang.yml  windows-conda-v142.yml  windows-conda.yml
ci/: install_linux.sh  install_osx.sh
cmake-modules/: Findassimp.cmake
doc/: CMakeLists.txt  Doxyfile.extra.in  collision-call.dot  generate_distance_plot.py  gjk.py  mesh-mesh-collision-call.dot  notes  shape-mesh-collision-call.dot  shape-shape-collision-call.dot
doc/python/: doxygen-boost.hh  doxygen.hh  doxygen_xml_parser.py  xml_docstring.py
include/coal/: collision.h  collision_data.h  collision_func_matrix.h  collision_object.h  doc.hh  (+11 more)
python/: CMakeLists.txt  coal.cc  coal.hh  collision-geometries.cc  collision.cc  contact_patch.cc  deprecation.hh  distance.cc  fcl.cc  fcl.hh  fwd.hh  gjk.cc  math.cc  octree.cc  pickle.hh  serializable.hh  serialize.hh  version.cc
python/broadphase/: broadphase.cc  broadphase_callbacks.hh  broadphase_collision_manager.hh  broadphase_dynamic_AABB_tree.hh  fwd.hh
python/coal/: __init__.py  viewer.py  windows_dll_manager.py
python/hppfcl/: __init__.py  viewer.py
python/utils/: std-pair.hh
src/: CMakeLists.txt  collision.cpp  collision_data.cpp  collision_func_matrix.cpp  collision_node.cpp  collision_node.h  collision_object.cpp  collision_utility.cpp  contact_patch.cpp  contact_patch_func_matrix.cpp  continuous_collision.cpp  distance.cpp  distance_box_halfspace.cpp  distance_box_plane.cpp  distance_box_sphere.cpp  distance_capsule_capsule.cpp  distance_capsule_halfspace.cpp  distance_capsule_plane.cpp  distance_cone_halfspace.cpp  distance_cone_plane.cpp  distance_cylinder_halfspace.cpp  distance_cylinder_plane.cpp  distance_func_matrix.cpp  distance_func_matrix.h  distance_sphere_cylinder.cpp  distance_sphere_halfspace.cpp  distance_sphere_plane.cpp  distance_sphere_sphere.cpp  hfield.cpp  intersect.cpp  intersect.h  octree.cpp  profile.cpp  traits_traversal.h
src/BV/: AABB.cpp  OBB.cpp  OBB.h  OBBRSS.cpp  RSS.cpp  kDOP.cpp  kIOS.cpp
src/BVH/: BVH_model.cpp  BVH_utility.cpp  BV_fitter.cpp  BV_fitter.h  BV_splitter.cpp
src/articulated_model/: joint.cpp  joint_config.cpp  link.cpp  model.cpp  model_config.cpp
src/broadphase/: broadphase_SSaP.cpp  broadphase_SaP.cpp  broadphase_bruteforce.cpp  broadphase_collision_manager.cpp  broadphase_dynamic_AABB_tree.cpp  broadphase_dynamic_AABB_tree_array.cpp  broadphase_interval_tree.cpp  broadphase_spatialhash.cpp  default_broadphase_callbacks.cpp  hierarchy_tree.cpp  interval_tree.cpp
src/broadphase/detail/: interval_tree.cpp  interval_tree_node.cpp  morton-inl.h  morton.cpp  simple_interval.cpp  spatial_hash.cpp
src/ccd/: conservative_advancement.cpp  interval.cpp  interval_matrix.cpp  interval_vector.cpp  motion.cpp  taylor_matrix.cpp  taylor_model.cpp  taylor_vector.cpp
src/ccd/interpolation/: interpolation.cpp  interpolation_factory.cpp  interpolation_linear.cpp
src/contact_patch/: contact_patch_solver.cpp
src/distance/: box_halfspace.cpp  box_plane.cpp  box_sphere.cpp  capsule_capsule.cpp  capsule_halfspace.cpp  capsule_plane.cpp  cone_halfspace.cpp  cone_plane.cpp  convex_halfspace.cpp  convex_plane.cpp  cylinder_halfspace.cpp  cylinder_plane.cpp  ellipsoid_halfspace.cpp  ellipsoid_plane.cpp  halfspace_halfspace.cpp  halfspace_plane.cpp  plane_plane.cpp  sphere_capsule.cpp  sphere_cylinder.cpp  sphere_halfspace.cpp  sphere_plane.cpp  sphere_sphere.cpp  triangle_halfspace.cpp  triangle_plane.cpp  triangle_sphere.cpp  triangle_triangle.cpp
src/geometric-tools/: GTEngineDEF.h
src/geometric-tools/Mathematics/: GteDCPQuery.h  GteDistLine3Triangle3.h  GteDistLineSegment.h  GteDistPointTriangle.h  GteDistSegment3Triangle3.h  GteDistTriangle3Triangle3.h  GteLine.h  GteMath.h  GteSegment.h  GteTriangle.h  GteVector.h  GteVector3.h
src/math/: sampling.cpp  tools.h  transform.cpp
src/mesh_loader/: assimp.cpp  loader.cpp
src/narrowphase/: details.h  gjk.cpp  gjk_libccd.cpp  minkowski_difference.cpp  narrowphase.cpp  support_functions.cpp
src/serialization/: serialization.cpp
src/shape/: convex.cpp  geometric_shapes.cpp  geometric_shapes_utility.cpp  geometric_shapes_utility.h
src/traversal/: traversal_node_base.cpp  traversal_node_base.h  traversal_node_bvh_shape.h  traversal_node_bvhs.cpp  traversal_node_bvhs.h  traversal_node_octree.h  traversal_node_setup.cpp  traversal_node_setup.h  traversal_node_shapes.h  traversal_recurse.cpp  traversal_recurse.h
test/: CMakeLists.txt  accelerated_gjk.cpp  benchmark.cpp  benchmark_nesterov_gjk.cpp  box_box_collision.cpp  box_box_distance.cpp  box_halfspace.cpp  box_plane.cpp  broadphase.cpp  broadphase_collision_1.cpp  broadphase_collision_2.cpp  broadphase_dynamic_AABB_tree.cpp  bvh_models.cpp  capsule_box_1.cpp  capsule_box_2.cpp  capsule_capsule.cpp  collision.cpp  collision_node_asserts.cpp  contact_patch.cpp  convex.cpp  distance.cpp  distance_lower_bound.cpp  frontlist.cpp  general_test.cpp  geometric_shapes.cpp  gjk-geometric-tools-benchmark  gjk.cpp  gjk_asserts.cpp  gjk_convergence_criterion.cpp  hfields.cpp  libsvm_classifier.h  math.cpp  nesterov_gjk.cpp  normal_and_nearest_points.cpp  obb.cpp  octree.cpp  profiling.cpp  security_margin.cpp  serialization.cpp  shape_inflation.cpp  (+33 more)
test/benchmark/: test_fcl_gjk.output
test/benchmark/meshes/: mesh0.dae  mesh1.dae  mesh2.dae  mesh3.dae
test/fcl_resources/: config.h.in  illformated_mesh.dae  staircases_koroibot_hr.dae
test/python_unit/: CMakeLists.txt  api.py  collision.py  collision_manager.py  geometric_shapes.py  pickling.py  test_case.py
test/scripts/: collision-bench.py  collision.py  distance_lower_bound.py  geometric_shapes.py  gjk.py  obb.py  octree.py
travis_custom/: custom_before_install_linux.sh  custom_before_install_osx.sh
(+333 files in other folders)
