<?xml version="1.0"?>
<package format="2">
  <name>hpp-fcl</name>
  <version>1.4.3</version>
  <description>An extension of the Flexible Collision Library.</description>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm. 
  Please check the repository URL for full list of authors and maintainers. -->
  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>
  <maintainer email="justin.carpentier@inria.fr">Justin Carpentier</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-fcl</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <build_depend>python-lxml</build_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend>python-lxml</doc_depend>
  <depend>python</depend>
  <depend>python-numpy</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>assimp</depend>
  <depend>octomap</depend>
  <depend>eigenpy</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
