<?xml version="1.0"?>
<package format="3">
  <name>hpp-fcl</name>
  <version>1.8.0</version>
  <description>An extension of the Flexible Collision Library.</description>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm. 
  Please check the repository URL for full list of authors and maintainers. -->
  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>
  <maintainer email="justin.carpentier@inria.fr">Justin Carpentier</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/humanoid-path-planner/hpp-fcl</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</build_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</doc_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>assimp</depend>
  <depend>octomap</depend>
  <depend>eigenpy</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
